# ZeroTrace_P2P

./: .gitignore  CLI_USAGE.md  I2P_INTEGRATION_SUMMARY.md  I2P_SETUP.md  PROTOCOL.md  QUICKSTART_I2P.md  QUICK_START.md  example_usage.py  kademlia.db  pyproject.toml  start_zerotrace.bat  test_i2p.bat  tunnels.conf  user_keys.json
src/kademlia/http_kad/: __init__.py  persistent_storage.py  routing.py  server.py  utils.py
src/kademlia/kademlia/: server.py
src/zerotrace/: __init__.py  i2p_manager.py  main.py
src/zerotrace/core/: api.py  database.py  http_client.py  messenger_core.py  models.py  router.py  scheme.py  utils.py
src/zerotrace/core/post_quantum/: crypto.py  sign.py
src/zerotrace/core/symmetric/: crypto.py
src/zerotrace/kademlia/: __init__.py  client.py  logging.py  persistent_storage.py  routing.py  server.py  storage.py  utils.py
tests/: conftest.py  mocks.py  test_http_kad.py  test_integration_http.py  test_kademlia.py  test_no_files.py  test_routing.py  test_sqlite_storage.py  test_storage.py
tests/core/: test_database.py  test_messanger_core.py  test_random_forwarding.py
tests/kademlia/: test_client_integration.py  test_client_unit.py  test_http_kad.py  test_integration_http.py  test_self.py  test_storage.py
