[project]
name = "kademlia"
version = "0.1.0"
description = ""
authors = [
    {name = "1blend.your.life1@gmail.com",email = "1blend.your.life1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.4.2,<9.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "kademlia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
